agent/src/ebpf/user/socket.h

/*
 * eBPF统计
 *
 * @perf_pages_count:     perf buffer内存占用的页数量
 * @kern_lost:            perf buffer数据用户态程序来不急接收数据
 *                        造成的SockData丢失数量
 * @kern_socket_map_max:  socket追踪的hash表项最大值
 * @kern_socket_map_used: socket追踪的hash表项当前值
 * @kern_trace_map_max:  线程/协程追踪会话的hash表项最大值
 * @kern_trace_map_used: 线程/协程追踪会话的hash表项当前值
 *
 * 数据处理统计
 * 每一次系统调用向socket读/写数据，都会被eBPF获取，并把此次的
 * 数据传递给用户态接收程序
 * 约定: 把通过eBPF获取一次socket读/写的数据称作'SockData'，它包含
 * 描述头和数据两部分。
 * @worker_num：          处理数据的工作线程数量
 * @queue_capacity：      单队列容量
 * @mem_alloc_fail_count：内存申请（用于为burst-SockDatas申请一块内存）失败次数统计
 * @user_enqueue_count:   用户态程序收到内核传过来的入队列的SockData数量
 * @user_dequeue_count:   用户态程序处理的SockData数量
 * @user_enqueue_lost:    由于队列没有空闲空间使得入队列失败而造成的SockData丢失数量
 * @queue_burst_count:	  通过burst方式进行入队列和出队列，这里统计burst（16个SockData）的次数
 *
 * kerenl 适配状态
 * @is_adapt_success: 适配成功为1，否则为0
 * @tracer_state: 追踪器当前状态
 *
 * @boot_time_update_diff 这里用于记录相邻两次更新后，系统启动时间之间的差异（单位为纳秒）。
 * @probes_count How many probes now 
 * @data_limit_max Maximum data length limit
 *
 * @period_push_conflict_count When the periodic push event detects that the
 *    buffer is being modified by another eBPF program, a conflict will occur.
 *    This is used to record the number of conflicts. 
 * @period_push_max_delay The maximum latency time for periodic push events, in microseconds.
 * @period_push_avg_delay The average latency time for periodic push events, in microseconds.
 * @proc_exec_event_count The number of events for process execute.
 * @proc_exit_event_count The number of events for process exits.
 */
struct socket_trace_stats {

	/*
	 * eBPF统计
	 */
	uint16_t perf_pages_cnt;
	uint64_t kern_lost;
	uint32_t kern_socket_map_max;
	uint32_t kern_socket_map_used;
	uint32_t kern_trace_map_max;
	uint32_t kern_trace_map_used;
	uint32_t socket_map_max_reclaim;

	/*
	 * 数据处理统计
	 */
	uint16_t worker_num;
	uint32_t queue_capacity;
	uint64_t mem_alloc_fail_count;
	uint64_t user_enqueue_count;
	uint64_t user_dequeue_count;
	uint64_t user_enqueue_lost;
	uint64_t queue_burst_count;

	//工作线程数据处理的平均消耗时间, 单位：微妙
	//uint32_t process_cost_time;

	/*
	 * kerenl 适配状态
	 */
	bool is_adapt_success;
	uint8_t tracer_state;

	int64_t boot_time_update_diff;
	uint32_t probes_count;
	uint32_t data_limit_max;

	/*
	 * Period push events statistics.
	 */
	uint64_t period_push_conflict_count;
	uint64_t period_push_max_delay;
	uint64_t period_push_avg_delay;

	/*
	 * Process start and exit events.
	 */
	uint64_t proc_exec_event_count;
	uint64_t proc_exit_event_count;

	/*
	 * Captured packet statistics
	 */
	uint64_t rx_packets;
	uint64_t tx_packets;
	uint64_t rx_bytes;
	uint64_t tx_bytes;
	uint64_t dropped_packets;
	uint64_t kern_missed_packets;
	uint64_t invalid_packets;

	/* Proc-cache capacity and deferred-reclamation statistics. */
	uint64_t proc_cache_active_count;
	uint64_t proc_cache_retired_count;
	uint64_t proc_cache_total_count;
	uint64_t proc_cache_total_limit;
	uint64_t proc_cache_rejected_total;
	uint64_t proc_cache_reclaimed_total;
	uint64_t proc_cache_oldest_wait_secs;
};
int set_data_limit_max(int limit_size);
int set_go_tracing_timeout(int timeout);
int set_io_event_collect_mode(uint32_t mode);
int set_io_event_minimal_duration(uint64_t duration);
struct socket_trace_stats socket_tracer_stats(void);
int running_socket_tracer(tracer_callback_t handle,
			  int thread_nr,
			  uint32_t perf_pages_cnt,
			  uint32_t queue_size,
			  uint32_t max_socket_entries,
			  uint32_t max_trace_entries,
			  uint32_t socket_map_max_reclaim);
int register_event_handle(uint32_t type, void (*fn)(void *));
int socket_tracer_stop(void);
int socket_tracer_start(void);
int set_protocol_ports_bitmap(int proto_type, const char *ports);