agent/src/ebpf/user/tracer.h

enum tracer_state {
	TRACER_INIT,
	TRACER_RUNNING,
	TRACER_STOP,
	TRACER_WAIT_START,
	TRACER_START_ERR,
	TRACER_WAIT_STOP,
	TRACER_STOP_ERR
};
struct queue {
	int id; // Queue Identifier
	struct bpf_tracer *t;
	struct ring *r;
	unsigned int ring_size;	// 队列配置大小，值为2的次幂
	void *datas_burst[MAX_EVENTS_BURST];	// burst的方式获取数据
	int nr;			// datas_burst中data数量

	/*
	 * 用于唤醒工作线程从队列上获取数据进行处理。
	 */
	pthread_mutex_t mutex;
	pthread_cond_t cond;

	/*
	 * 各种统计
	 */
	atomic64_t enqueue_lost;
	atomic64_t enqueue_nr;
	atomic64_t burst_count;
	atomic64_t dequeue_nr;
	atomic64_t heap_get_failed;	// 从heap上获取内存失败的次数统计
};
struct bpf_tracer;
struct bpf_tracer {
	/*
	 * tracer info
	 */
	char name[NAME_LEN];	// tracer name
	char bpf_load_name[NAME_LEN];	// Tracer bpf load buffer name.
	// Used to identify which eBPF buffer is loaded by the kernel
	void *buffer_ptr;	// eBPF bytecodes buffer pointer
	int buffer_sz;		// eBPF buffer size
	struct ebpf_object *obj;	// eBPF object
	bool is_use;		// Whether it is being used.
	volatile uint32_t *lock;	// tracer lock

	/*
	 * probe, tracepoint
	 */
	struct tracer_probes_conf *tps;	// probe, tracepoint, uprobes config
	struct list_head probes_head;
	int probes_count;	// probe count.
	struct tracepoint tracepoints[PROBES_NUM_MAX];
	int tracepoints_count;
	struct kfunc kfuncs[PROBES_NUM_MAX];
	int kfuncs_count;
	pthread_mutex_t mutex_probes_lock;	// Protect the probes operation in multiple threads

	/*
	 * perf event(type is TRACER_TYPE_PERF_EVENT) for attach fds.
	 */
	int per_cpu_fds[MAX_CPU_NR];
	int sample_freq;	// sample frequency, Hertz.
	/*
	 * Enable CPU sampling?
	 * For the following scenario:
	 * If the on-CPU profiler is disabled, this setting will be false,
	 * which means that perf sampling events will not be enabled, the attach
	 * operation will not be executed.
	 */
	bool enable_sample;
	// perf event state
	enum perf_event_state ev_state;

	/*
	 * Data distribution processing worker, queues
	 */
	pthread_t perf_workers[MAX_CPU_NR];	// Main thread for user-space receiving perf-buffer data
	pthread_t dispatch_workers[MAX_CPU_NR];	// Dispatch threads
	int dispatch_workers_nr;	// Number of dispatch threads
	struct queue queues[MAX_CPU_NR];	// Dispatch queues, each dispatch thread has its corresponding queue.
	void *process_fn;	// Callback interface passed from the application for data processing
	void (*datadump) (void *data, int64_t boot_time);	// eBPF data dump handle

	/*
	 * perf ring-buffer from kernel to user.
	 * A tracer may contain multiple readers, and there is a fixed
	 * upper limit (PERF_READER_NUM_MAX) on the number of
	 * readers that a tracer can have.
	 */
	struct bpf_perf_reader readers[PERF_READER_NUM_MAX];
	int perf_readers_count;

	/*
	 * statistics
	 */
	atomic64_t recv;	// User-level program event reception statistics. 
	atomic64_t lost;	// User-level programs not receiving data in time can cause data loss in the kernel.
	atomic64_t proto_stats[PROTO_NUM];	// Statistical analysis based on different l7 protocols.
	// Packet Statistics Obtained from DPDK
	atomic64_t rx_pkts;
	atomic64_t tx_pkts;
	atomic64_t rx_bytes;
	atomic64_t tx_bytes;
	atomic64_t dropped_pkts;

	/*
	 * maps re-config
	 */
	struct list_head maps_conf_head;

	/*
	 * Intended for use as a callback function
	 * for resource release and create tracer.
	 */
	tracer_op_fun_t release_cb;
	tracer_op_fun_t create_cb;

	/*
	 * tracer 控制接口和运行状态
	 */
	volatile enum tracer_state state;	// 追踪器状态（Tracker status）
	bool adapt_success;	// 是否成功适配内核, true 成功适配，false 适配失败
	uint32_t data_limit_max;	// The maximum amount of data returned to the user-reader

	/*
	 * Callback function contexts for continuous profiler
	 * Should only be used to create profiler context
	 */
	void *profiler_callback_ctx[PROFILER_CTX_NUM];
};
int set_allow_port_bitmap(void *bitmap);
int set_bypass_port_bitmap(void *bitmap);
int enable_ebpf_protocol(int protocol);
int set_feature_regex(int feature, const char *pattern);
int bpf_tracer_init(const char *log_file, bool is_stdout);
void bpf_tracer_finish(void);
/**
 * @brief Enable eBPF segmentation reassembly for the specified protocol.
 * 
 * @param protocol Protocols for segmentation reassembly
 * @return 0 on success, non-zero on error
 */
int enable_ebpf_seg_reasm_protocol(int protocol);
/**
 * @brief Add regex-matched process list for feature.
 * 
 * @param feature Refers to a specific feature module, value: FEATURE_*
 * @param pids Address of the process list
 * @param num Number of elements in the process list
 * @return 0 on success, non-zero on error
 */
int set_feature_pids(int feature, const int *pids, int num);