agent/src/ebpf/mod.rs


            write!(
                f,
                "Timestamp: {} Socket: {} CapSeq: {} Process: {}:{} Thread: {} MsgType: {} Direction: {} \n \
                \t{}_{} -> {}_{} Seq: {} Trace-ID: {} L7: {} TLS: {:?} Data {:?}",
                self.timestamp,
                self.socket_id,
                self.cap_seq,
                process_kname,
                self.process_id,
                self.thread_id,
                self.msg_type,
                self.direction,
                src_ip,
                port_src,
                dst_ip,
                port_dst,
                self.tcp_seq,
                self.syscall_trace_id_call,
                self.l7_protocol_hint,
                self.is_tls,
                data_bytes
            )
        }
    }
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SK_TRACE_STATS {
    /*
     * 每一次系统调用向socket读/写数据，都会被eBPF获取，并把此次的
     * 数据传递给用户态接收程序
     * 约定: 把通过eBPF获取一次socket读/写的数据称作'SockData'，
     * 一个‘SockData’包含描述头和数据两部分。
     */

    /*
     * eBPF统计
     */
    pub perf_pages_count: u32,       // perf buffer内存占用的页数量
    pub kern_lost: u64, // perf buffer数据用户态程序来不及接收数据，造成的SockData丢失数量
    pub kern_socket_map_max: u32, // socket追踪的hash表项最大值
    pub kern_socket_map_used: u32, // socket追踪的hash表项当前值
    pub kern_trace_map_max: u32, // 线程/协程追踪会话的hash表项最大值
    pub kern_trace_map_used: u32, // 线程/协程追踪会话的hash表项当前值
    pub socket_map_max_reclaim: u32, // socket map表项进行清理的最大阈值，
    // 当前map的表项数量超过这个值进行map清理操作。

    /*
     * 数据处理统计
     */
    pub worker_num: u16,           // 处理数据的工作线程数量
    pub queue_capacity: u32,       // 单队列容量
    pub mem_alloc_fail_count: u64, // 内存申请（用于为burst-SockDatas申请一块内存）失败次数统计
    pub user_enqueue_count: u64,   // 用户态程序收到内核传过来的入队列的SockData数量
    pub user_dequeue_count: u64,   // 用户态程序处理的SockData数量
    pub user_enqueue_lost: u64,    // 由于队列没有空闲空间使得入队列失败而造成的SockData丢失数量
    pub queue_burst_count: u64, // 通过burst方式进行入队列和出队列，这里统计burst（16个SockData）的次数。

    /*
     * tracer 当前状态
     */
    pub is_adapt_success: bool, // 适配状态：内核适配成功为true，否则为false
    pub tracer_state: u8,       // 追踪器当前状态。值：TRACER_INIT, TRACER_STOP，TRACER_RUNNING,
    // TRACER_WAIT_START, TRACER_START_ERR, TRACER_WAIT_STOP, TRACER_STOP_ERR

    /*
     * 纳秒级系统启动时间每分钟进行一次更新，
     * 这里用于记录相邻两次更新后，系统启动时间之间的差异（单位为纳秒）。
     * boot_time_update_diff（ns）= 本次更新后的系统启动时间(ns) - 上次更新后的系统启动时间(ns)
     */
    pub boot_time_update_diff: i64,
    // How many probes now
    pub probes_count: u32,
    // Maximum length limit of eBPF data transmission
    pub data_limit_max: u32,

    /*
     * When the periodic push event detects that the buffer is being modified by
     * another eBPF program, a conflict will occur. This is used to record the
     * number of conflicts.
     */
    pub period_push_conflict_count: u64,
    pub period_push_max_delay: u64, // The maximum latency time for periodic push events, in microseconds.
    pub period_push_avg_delay: u64, // The average latency time for periodic push events, in microseconds.
    pub proc_exec_event_count: u64, // The number of events for process execute.
    pub proc_exit_event_count: u64, // The number of events for process exits.

    // Captured packet statistics
    pub rx_packets: u64,
    pub tx_packets: u64,
    pub rx_bytes: u64,
    pub tx_bytes: u64,
    pub dropped_packets: u64,
    pub kern_missed_packets: u64,
    pub invalid_packets: u64,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct stack_profile_data {
    pub profiler_type: u8, // Profiler type, such as 1(PROFILER_TYPE_ONCPU).
    pub timestamp: u64,    // Timestamp of the stack trace data(unit: nanoseconds).
    pub pid: u32,          // User-space process-ID.
    /*
     * Identified within the eBPF program in kernel space.
     * If the current is a process and not a thread this field(tid) is filled
     * with the ID of the process.
     */
    pub tid: u32,
    pub stime: u64,      // The start time of the process is measured in milliseconds.
    pub netns_id: u64,   // Fetch from /proc/<PID>/ns/net
    pub u_stack_id: u32, // User space stackID.
    pub k_stack_id: u32, // Kernel space stackID.
    pub cpu: u32,        // The captured stack trace data is generated on which CPU?
    /*
     * If profiler_type is PROFILER_TYPE_MEMORY, this is allocated or free'd address.
     * Or 0 for java processes
     */
    pub mem_addr: u64,
    /*
     * The profiler captures the sum of durations of occurrences of the same
     * data by querying with the quadruple
     * "<pid + stime + u_stack_id + k_stack_id + tid + cpu>" as the key.
     * In microseconds as the unit of time.
     * If profiler_type is PROFILER_TYPE_MEMORY, this is allocated byte count value, or negative for frees
     */
    pub count: u64,
    /*
     * comm in task_struct(linux kernel), always 16 bytes
     * If the capture is a process, fill in the process name here.
     * If the capture is a thread, fill in the thread name.
     */
    pub comm: [u8; PACKET_KNAME_MAX_PADDING + 1],
    pub process_name: [u8; PACKET_KNAME_MAX_PADDING + 1], // process name
    pub container_id: [u8; CONTAINER_ID_SIZE],            // container id
    pub stack_data_len: u32,                              // stack data length

    /*
     * Example of a folded stack trace string (taken from a perf profiler test):
     * main;xxx();yyy()
     * It is a list of symbols corresponding to addresses in the underlying stack trace,
     * separated by ';'.
     *
     * The merged folded stack trace string style for user space and kernel space would be:
     * <user space folded stack trace string> + ";" + <kernel space folded stack trace string>
     */
    pub stack_data: *mut c_char,
}

extern "C" {
    /*
     * Set maximum amount of data passed to the agent by eBPF program.
     * @limit_size : The maximum length of data. If @limit_size exceeds 8192,
     *               it will automatically adjust to 8192 bytes.
     *               If limit_size is 0, use the default values 4096.
     *
     * @return the set maximum buffer size value on success, < 0 on failure.
     */
    pub fn set_data_limit_max(limit_size: c_int) -> c_int;
    pub fn set_go_tracing_timeout(timeout: c_int) -> c_int;
    pub fn set_io_event_collect_mode(mode: c_int) -> c_int;
    pub fn set_io_event_minimal_duration(duration: c_ulonglong) -> c_int;
    pub fn set_allow_port_bitmap(bitmap: *const c_uchar) -> c_int;
    pub fn set_bypass_port_bitmap(bitmap: *const c_uchar) -> c_int;
    pub fn enable_ebpf_protocol(protocol: c_int) -> c_int;
    pub fn enable_ebpf_seg_reasm_protocol(protocol: c_int) -> c_int;
    pub fn set_feature_regex(idx: c_int, pattern: *const c_char) -> c_int;
    /*
     * @brief Add regex-matched process list for feature.
     *
     * @param feature Refers to a specific feature module, value: FEATURE_*
     * @param pids Address of the process list
     * @param num Number of elements in the process list
     * @return 0 on success, non-zero on error
     */
    pub fn set_feature_pids(feature: c_int, pids: *const c_int, num: c_int) -> c_int;

    /*
     * Configuring application layer protocol ports
     *
     * When 'l7-protocol-enabled' includes application layer protocol types,
     * 'l7-protocol-ports' specifies the port numbers or port number ranges
     * for these protocols. eBPF will perform protocol inference on the
     * specified port numbers for a given protocol. If a protocol's port number
     * is not within the configured range, inference for that protocol will not
     * be performed.
     *
     * Parameters:
     * @proto_type: Protocol type, e.g., SOCK_DATA_HTTP1/SOCK_DATA_HTTP2 ...
     * @ports: Port range, e.g., "443, 4467-5678"
     *
     * @return: Returns 0 on success, a non-zero value on error.
     *
     * For example, with the following configuration:
     * ```
     * l7-protocol-enabled:
     *    TLS
     * l7-protocol-ports:
     *    "TLS": "443, 4467-5678"
     * ```
     * During the eBPF protocol inference phase, TLS protocol inference will be
     * performed on the port numbers and range "443, 4467-5678." If the inference
     * fails, data will be discarded.
     *
     * Note: that the default value for 'TLS' in 'l7-protocol-ports' is "443".
     */
    pub fn set_protocol_ports_bitmap(proto_type: c_int, ports: *const c_char) -> c_int;

    // 初始化tracer用于设置eBPF环境初始化。
    // 参数：
    //   log_file  日志文件路径，如果是传递一个空指针将不会有日志写到文件。
    //   is_stdout 日志是否输出到标准输出，true 写到标准输出，false 不写到标准输出。
    // 返回值：
    //   成功返回0，否则返回非0
    pub fn bpf_tracer_init(log_file: *const c_char, is_stdout: bool) -> c_int;

    // 所有tracer启动完毕后，最后显示调用bpf_tracer_finish()来通知主程序
    pub fn bpf_tracer_finish();

    pub fn set_uprobe_golang_enabled(enabled: bool) -> c_void;
    pub fn set_uprobe_openssl_enabled(enabled: bool) -> c_void;

    // 获取socket_tracer的这种统计数据的接口
    pub fn socket_tracer_stats() -> SK_TRACE_STATS;

    // Register extra event handle for socket tracer
    // @event_type : register event type, e.g.: EVENT_TYPE_PROC_EXEC or EVENT_TYPE_PROC_EXIT ...
    // @callback : Callback function for event
    // @return 0 is success, if not 0 is failed
    pub fn register_event_handle(
        event_type: c_uint,
        callback: extern "C" fn(data: *mut PROCESS_EVENT),
    ) -> c_int;

    // Set whether to pre-allocate memory when creating a map?
    // @enabled : true Pre-allocate memory when defining a BPF hash map
    //            false Define a map without preallocated memory
    pub fn set_bpf_map_prealloc(enabled: bool) -> c_void;

    // Parameter descriptions:
    // callback: Callback interface from Rust to C; return values refer to definitions of TRACER_CALLBACK_FLAG_*.
    // thread_nr: Number of worker threads, indicating how many user-space threads participate in data processing.
    // perf_pages_cnt: Number of page frames occupied by shared memory with the kernel; value is a power of 2, with page frame size of 4 KB.
    // ring_size: Size of the ring buffer queue; value is a power of 2.
    // max_socket_entries: Maximum number of hash table entries for socket tracking, depending on the concurrency in the actual scenario.
    // max_trace_entries: Maximum number of hash table entries for thread/coroutine tracking sessions.
    // socket_map_max_reclaim: Maximum threshold for cleaning entries in the socket map; when the current number of entries exceeds this value, the map cleanup is triggered.
    // Return value: Returns 0 on success, non-zero otherwise.
    pub fn running_socket_tracer(
        callback: extern "C" fn(_: *mut c_void, queue_id: c_int, sd: *mut SK_BPF_DATA) -> c_int,
        thread_nr: c_int,
        perf_pages_cnt: c_uint,
        ring_size: c_uint,
        max_socket_entries: c_uint,
        max_trace_entries: c_uint,
        socket_map_max_reclaim: c_uint,
    ) -> c_int;

    // 停止tracer运行
    // 返回值：成功返回0，否则返回非0
    pub fn socket_tracer_stop() -> c_int;

    // 启动tracer运行
    // 返回值：成功返回0，否则返回非0
    pub fn socket_tracer_start() -> c_int;

    // 注意：eBPF tracer初始化加载运行后进行内核适配，
    // 适配完成后马上进入stop状态，需调用socket_tracer_start()才开始工作。
